# chat-maf

./: .dockerignore  .gitignore  DEVELOPMENT.md  Dockerfile  README.md  TELEMETRY.md  WORKFLOW_MESSAGE_MIGRATION.md  aspire-dashboard.yaml
backend/: .env.example  .gitignore  main.py  pyproject.toml  run_dev.sh  test_eval.py
backend/agent/: chat_agent.py  instruction_agent.py  website_assistant_agent.py
backend/agents/: __init__.py  instruction_agent.py  website_assistant_agent.py
backend/agents/instruction_agent/: agent.py
backend/agents/nl2sql_workflow/: __init__.py  config.py  helpers.py  models.py  prompt_manager.py  prompts.py  prompts.yaml  workflow.py
backend/agents/nl2sql_workflow/executors/: __init__.py  aggregate_results.py  errors.py  evaluate_reasoning.py  generate_nl_response.py  handle_success.py  (+9 more)
backend/agents/playwright_agent/: __init__.py  agent.py
backend/agents/webscraper_agent/: agent.py
backend/agents/website_assistant_workflow/: workflow.py
backend/config/: settings.py
backend/database/: .gitignore  download_spider.sh  generate_m_schema.py  schema_cache.py  setup_spider.py  spider_utils.py  sql_security.py
backend/evaluation/nl2sql/: run_evaluation.py
backend/middleware/: __init__.py  agent_middleware.py  quality_evaluation.py  rate_limiter.py
backend/models/: __init__.py  analysis_request.py
backend/tools/: __init__.py  confidence_extractor.py  progressive_data_sources.py  schema_tools.py  spider_api.py
backend/utils/: __init__.py  formatters.py  otlp_tracing.py
backend/workflows/: __init__.py  progressive_analysis.py
(+37 files in other folders)
