[project]
name = "nl2sql-maf"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "agent-framework>=1.0.0b251016",
    "fastapi[standard]>=0.119.0",
    "uvicorn>=0.37.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.6",
    "playwright>=1.40.0",
    "python-dotenv>=1.1.1",
    "nltk>=3.9.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "models*", "config*", "database*", "middleware*", "tools*", "utils*"]

[tool.uv]
prerelease = "allow"
